# layout-bug-hunter

./: .gitignore
BaselineTest/: BaselineTest.unoproj  MainView.ux
Evaluation/AlignmentChangeTest/: MainView.ux
Evaluation/AppWithManyErrors/: AppWithManyErrors.unoproj  MainView.ux
Evaluation/OverlapTest/: MainView.ux
ResultsCode/Exploring/: MainView.ux  exploring.unoproj  places.js
fuse-testing-oracle-server/: Cargo.toml  build.bat  build.sh  readme.md  rust.natvis  test_script_1.yaml
fuse-testing-oracle-server/src/: baseline_finder.rs  drawing.rs  main.rs  random_color.rs  server.rs  test_sets.rs
fuse-testing-oracle-server/src/layout_validator/: lost_alignment.rs  mod.rs  overlap_and_overflow.rs  validity_rules.rs
fuse-testing-oracle-server/src/test_runner/: mod.rs  test_script.rs
fuse-view-crawler/: CrawlerResultJsonWriter.uno  FuseViewCrawler.unoproj  GUIOracleClient.uno  GUITestOracle.uno  Message.uno  ViewCrawler.uno
