[package]
name = "fuse-testing-oracle-server"
version = "0.1.0"
authors = ["Kristian Fjeld Hasselknippe <kristian_hasselknippe@outlook.com>"]

[dependencies]
serde = "0.9"
serde_derive = "0.9"
serde_json = "0.9"
serde_yaml = "0.6.2"

mio = "0.6.6"

time = "0.1.37"

clap = "2.22.1"

winapi = "0.2.8"
user32-sys = "0.2.0"
kernel32-sys = "0.2.2"
gdi32-sys = "0.2.0"

rand = "0.3"

itertools = "0.5.10"


[dependencies.sdl2]
version = "0.29"
default-features = false
features = ["ttf", "image"]